<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="30dp"
            android:text="저장할 곳을 고르세요"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/radioButton_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="History"
            android:padding="20dp"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioButton_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textSize="20dp"
            android:text="WishList" />

    </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <Button
        android:id="@+id/before2"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FF8080"
        android:text="이전" />
    <Button
        android:id="@+id/finish"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FF8080"
        android:text="Finish" />
</LinearLayout>


</LinearLayout>