<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Left \nLens"
                android:textColor="#E87F76"
                android:textSize="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/editText_lefteye"
                android:background="@drawable/rect_text_edit"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:hint="왼쪽도수"
                android:privateImeOptions="defaultInputmode=numeric"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E87F76"
                android:text="Right \nLens"
                android:textSize="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/editText_righteye"
                android:background="@drawable/rect_text_edit"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:hint="오른쪽도수"
                android:privateImeOptions="defaultInputmode=numeric"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
    <Button
        android:id="@+id/button_dialog_cancle"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:background="#FF8080"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="취소" />

    <Button
        android:id="@+id/button_dialog_next"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:background="#FF8080"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Next" />
    </LinearLayout>
</LinearLayout>