...
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_history"
        android:background="#E4E4E4"
    />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_main_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintVertical_weight="9"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@android:color/darker_gray"
...
        app:layout_constraintVertical_weight="9"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbars="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/kim_second_line"
        app:layout_constraintBottom_toTopOf="@+id/button_main_insert"/>

    <ImageButton
        android:id="@+id/button_main_insert"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="25dp"
...
